[package]
name = "libusb1-sys"
version = "0.7.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"
build = "build.rs"
links = "usb-1.0" # Required for metadata passing to work

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["DedicatedWorkerGlobalScope", "console"] }
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde_bytes = "0.11.17"
serde-wasm-bindgen = "0.6.5"
rmp-serde = "1.3.0"
libc = "0.2.175"
